<resources>
    <string name="app_name">JD Heating &amp; Cooling</string>
    <string name="action_call">Call</string>
    <string name="about_1">Your home comfort is not somethhing you ever want to think about. Protectiong your family and your hoime is important and choosing the right company to help you along the way can be just as important. With that in mind, JD Heating and Cooling is know for quality workmanship and professional serivice, and is recognized by industry community leaders; Hutchinson Fuels and Noco (Esso). Experience the difference our quality and service can make in your home.</string>
    <string name="about_2">370 Boes Rd\nBrighton, ON K0K 1H0</string>
    <string name="about_3"> </string>
    <string name="about_4">Office: 1-855-902-5209</string>
    <string name="email">jdheatingandcooling@gmail.com</string>
    <string name="about_6">Mon-Fri 8-4pm</string>
    <string name="about_7">Use the buttons above to call or email us!</string>
    <string name="filter_1">Enter the last time you cleaned your fliter:</string>
    <string name="filter_2">Next</string>
    <string name="filter_3">You cleaned your filters last on</string>
    <string name="filter_6">Change Date</string>
    <string name="filter_4">You will be notified to clean your filters again on</string>
    <string name="filter_5">You are overdue on your filter cleaning! Make sure you clean your filters than come back and update the date.</string>
    <string name="service_1">Select your furnace type from the dropdown menu below:</string>
    <string name="service_2">Click the button below to enter the date of your last service appointment:</string>
    <string name="service_3">Enter Date</string>
    <string name="service_4">Your last service was on</string>
    <string name="service_5">Never had a service appointment? Contact us now to book an appointment!</string>.
    <string name="service_6">We recommend you get your next service on</string>
    <string name="service_7">You will be reminded three months before to book your appointment.</string>
    <string name="service_8">You are overdue on your service! Contact JD Heating &amp; Cooling to book an appointment, then come back to the app to update this page!</string>
    <string name="recommed_1">Please recommend our services to a friend!</string>
    <string name="recommend_2">Send</string>
    <string-array name="nav_drawer_items">
        <item>About</item>
        <item>Filters</item>
        <item>Service</item>
        <item>Recommend</item>
    </string-array>
    <string-array name="furnace_type">
        <item>Oil furnace/Boiler</item>
        <item>Natural Gas</item>
        <item>A/C</item>
    </string-array>
</resources>
