<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:gravity="center_horizontal"
            android:text="@string/about_1"
            android:layout_marginBottom="35dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/address_1"
            android:layout_marginBottom="10dp"
            android:text="@string/about_2" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/phone_number"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:text="@string/about_4" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textAllCaps="false"
            android:id="@+id/email"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:text="@string/email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:text="@string/about_6" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/about_7" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_call_black_48dp" />

            <ImageView
                android:id="@+id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_email_black_48dp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>